Fix 500 on intern doubt submission: List.of() NPE on null repliedById/resolvedById
DoubtRequestService.toResponse called List.of(internUserId, trainerUserId,
repliedById, resolvedById) before passing the list to bulkNames(). On a
freshly-created (PENDING) doubt repliedById and resolvedById are both
null, and Java's List.of() throws NullPointerException on null elements
(documented behaviour) — which propagated to GlobalExceptionHandler's
Throwable catch-all and surfaced as HTTP 500.

The save itself succeeded (the row landed in doubt_requests) — only the
response serialization failed. Same bug also bit the trainer list/get
endpoints whenever any returned doubt was still PENDING.

Fix: swap List.of(...) for Arrays.asList(...), which permits nulls.
bulkNames() already filters them out.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>